--- a/Realtrend/Realtrend/Shared/MainLayout.razor
+++ b/Realtrend/Realtrend/Shared/MainLayout.razor
@@ -3,15 +3,13 @@
 <PageTitle>Realtrend</PageTitle>
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+  
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+        <div class="custom-app-bar">
+            <img src="icon.png" alt="Icon" width="120" height="120" />
+            <label class="text-black">RealTrend</label>
         </div>
-
         <article class="content px-4">
             @Body
         </article>
