--- a/Realtrend/Realtrend/Pages/_Host.cshtml
+++ b/Realtrend/Realtrend/Pages/_Host.cshtml
@@ -11,8 +11,10 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="css/CustomStyling.css" rel="stylesheet" />
     <link href="Realtrend.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="icon.png" />
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
