--- a/Realtrend/Realtrend/Pages/Index.razor
+++ b/Realtrend/Realtrend/Pages/Index.razor
@@ -77,6 +77,7 @@
 
         AddressState.SetCurrentAddress(userAddress);
 
+        //Test
 
         NavigationManager.NavigateTo("/chartpage");
     }
