--- a/Realtrend/Realtrend/Components/AddressForm.razor
+++ b/Realtrend/Realtrend/Components/AddressForm.razor
@@ -10,7 +10,7 @@
 
   <div class="p-4" style="max-width: 700px; border-radius:30px; background-color: @GlobalColors.CustomBackgroundColor;">
     <div class="d-flex justify-content-center">
-      <h6 class="text-black">INDTAST DIN ADRESSE</h6>
+      <h5 class="text-black" style="margin-bottom: 20px;">INDTAST DIN ADRESSE</h5>
     </div>
 
     <form @onsubmit="OnSubmit">
@@ -43,7 +43,7 @@
       </div>
 
       <div class="d-flex justify-content-center">
-        <input type="submit" value="Find boligvurderinger" class="btn btn-primary" style="background-color: @GlobalColors.CustomApplicationColor;" />
+        <input type="submit" value="Find boligvurderinger" class="btn btn-primary" style="background-color: @GlobalColors.CustomApplicationColor; margin-top: 20px;" />
       </div>
     </form>
   </div>
