--- a/Realtrend/Realtrend/Pages/Index.razor
+++ b/Realtrend/Realtrend/Pages/Index.razor
@@ -11,6 +11,9 @@
 @if (showAdditionalButton)
 {
     <div class="d-flex justify-content-center mt-3">
+        <h6 class="text-white" style="margin: 20px;">Dine oplysninger er klar...!</h6>
+    </div>
+    <div class="d-flex justify-content-center mt-3">
         <button class="btn btn-secondary" @onclick="showCharts">Prishistorik</button>
         <button class="btn btn-secondary mx-3">Ny feature</button>
         <button class="btn btn-secondary">Ny feature</button>
