--- a/Realtrend/Realtrend/Pages/ChartPage.razor
+++ b/Realtrend/Realtrend/Pages/ChartPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/chartpage"
-@using Realtrend.Models;
+@using Realtrend.Library;
 @using Realtrend.Services;
 
 @inject AddressStateService AddressState;
