Organized code, renamed some files, added some comments

--- a/Realtrend/Realtrend/Components/AddressForm.razor
+++ b/Realtrend/Realtrend/Components/AddressForm.razor
@@ -1,5 +1,5 @@
-@using Realtrend.Interfaces;
-@using Realtrend.Library;
+@using Realtrend.Library.Interfaces;
+@using Realtrend.Library.Models;
 @using Realtrend.Services;
 
 @inject IAddress AddressService;
