--- a/Realtrend/Realtrend/Pages/Index.razor
+++ b/Realtrend/Realtrend/Pages/Index.razor
@@ -30,12 +30,13 @@
         showAdditionalButton = true;
     }
 
+    //Navigér til Chart siden
     private void showCharts()
     {
-        // Navigate to the chart page
         NavigationManager.NavigateTo("/chartpage");
     }
 
+    //Navigér til Comparison siden
     private void showComparisons()
     {
         NavigationManager.NavigateTo("/comparison");
