--- a/Realtrend/Realtrend/Pages/ChartPage.razor
+++ b/Realtrend/Realtrend/Pages/ChartPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/chartpage"
 @using Realtrend.Library
 @using BlazorBootstrap
-@using Realtrend.Models
+@using Realtrend.Library.Models;
 @using Realtrend.Services
 @inject AddressStateService AddressState
 @inject PropertyDataService PropertyDataService
@@ -31,7 +31,8 @@
 
     private async Task<List<PairedItem>> GetValues(int bfeNumber)
     {
-        var property = await PropertyDataService.GetPropertyByBfeNumberAsync(bfeNumber);
+        //Henter property data via PropertyDataService med det valgte bfeNummer som parameter
+        var property = await PropertyDataService.GetAssessmentPropertyByBfeNumberAsync(bfeNumber);
 
         var valueSpecifications = property.ValueSpecifications;
 
@@ -39,14 +40,14 @@
 
         foreach (var item in valueSpecifications)
         {
-            // Create a new PairedItem object for each Dato and Beløb pair
+            // Opretter et nyt PairedItem objekt for hver Dato og Beløb par
             var pairedItem = new PairedItem
                 {
-                    Dato = item.Dato, // Assuming Dato is already a DateTime
-                    Beløb = item.Beløb // Assuming Beløb is already a double
+                    Dato = item.Dato,
+                    Beløb = item.Beløb
                 };
 
-            pairedItems.Add(pairedItem); // Add the PairedItem to the list
+            pairedItems.Add(pairedItem);
         }
 
         return pairedItems;
@@ -76,7 +77,7 @@
                 BorderWidth = new List<double> { 2 },
                 HoverBorderWidth = new List<double> { 4 },
                 PointBackgroundColor = new List<string> { colors[0] },
-                PointRadius = new List<int> { 0 }, // hide points
+                PointRadius = new List<int> { 3 },
                 PointHoverRadius = new List<int> { 4 },
             };
         datasets.Add(dataset1);
